# dotfiles

./: .dockerignore  .envrc  .gitattributes  .gitconfig  .gitignore  .mcp.json  .mise.toml  .treefmt.toml  80-jonas.conf  80-natural-scrolling.conf  AGENTS.md  CLAUDE.md  Dockerfile  Justfile  LICENSE  Makefile  README.md  all_config.yml  all_software.yml  ansible_bootstrap.sh  dotfiles.yml  fonts.yml  install.sh  install_i3.sh  install_zsh.sh  linux_software.yml  main.yml  mise.toml  osx_config.yml  osx_software.yml  pyproject.toml  setup.sh  setup_python.sh  statix.toml  treefmt.toml  ubuntu_config.yml  ubuntu_software.yml  vim.yml  xsessionrc  zshrc
.claude/: settings.json
.claude/commands/: sync-configs.md
.claude/rules/: niri-switcher.md  niri.md  nix.md
aerospace/: aerospace.toml
ansible/: all_config.yml  all_software.yml  fonts.yml  linux_config.yml  linux_software.yml  main.yml  osx_config.yml  ubuntu_software.yml
claude/: CLAUDE-GLOBAL.md  install-mcp.sh  install-mcps.sh  settings.json  status_line.py
claude/agents/: code-reviewer.md  complexity-reducer.md  dev-server-controller.md  software-research-analyst.md
claude/commands/: backtrack-linear.md  command-template.md  create-issue.md  create-linear-issue.md  create-prd.md  gc.md  generate-tasks-from-linear.md  generate-tasks.md  git-commit.md  handover.md  pr.md  prcheck.md  process-tasks-auto.md  process-tasks.md  rbm.md  review.md  takeover.md  tmux-dev.md  work-on-linear-issue.md  work.md
claude/devcontainer/: Dockerfile
claude/hooks/: autoformat.py  bash_command.py  task_notification.py
claude_tools/: __init__.py  core.py  duration.py  prompts.py  simple_loop.py  work_timer.py
codex/prompts/: gc.md  handover.md  pr.md  prcheck.md
config/aerospace/: aerospace.toml
config/claude/: CLAUDE-GLOBAL.md  ccstatusline-settings.json  install-mcp.sh  mcps.txt  plugins-setup.txt  settings.example.json  settings.json  status_line.py
config/codex/: AGENTS-GLOBAL.md  AGENTS.md  config.example.toml  config.toml  hooks.json  notify.py
config/cursor/: keybindings.json  keybindings.linux.json  settings.example.json  settings.json
config/direnv/: .gitignore  direnvrc
config/ghostty/: config
config/git/: git-filter-codex-config  gitconfig  gitignoreglobal  install-git-hooks
config/hypr/: hyprland.conf
config/jetbrains/: ideavimrc
config/k9s/: config.yaml  views.yaml
config/keyd/: default.conf
config/lazygit/: config.yml
config/mise/: config.toml
config/niri/: base.kdl  binds-base.kdl  config.kdl
config/npm/: default-packages
config/nvim/: AGENTS.md  CLAUDE.md  Justfile  init.lua  lazy-lock.json
config/pi/: .oxfmtrc.json  AGENTS-GLOBAL.md  AGENTS.md  models.json  openai-server-compaction.json  package.json  pnpm-lock.yaml  settings.example.json
config/starship/: starship.toml
config/themes/: thrawny-molokai.itermcolors  thrawny.zsh-theme
config/tmux/: session-mappings.conf.example  session-navigation.conf  session-order.conf.example  status-bar.conf  tmux.conf
config/vim/: vimrc
config/vivaldi/: keybindings.json
config/vscode/: settings.json
config/walker/: config.toml  style.css
config/waybar/: style.css
config/wayvoice/: config.toml
config/zsh/: zshrc
cursor/: keybindings.json  settings.json
devcontainer/: init-firewall.sh  install.sh
docs/: agent-infra-design.md  agent-switch-extraction.md  agent-switch.md  asahi.md  nix-just-direnv-migration.md  nixos-hyprland-drawer-terminal.md  nuke-treesitter.md  nvim-notebook.md  sandbox-wayland-security.md  ut2004-linux.md  z13-suspend-hibernate.md  zinit.md
git/: gitconfig  gitignoreglobal
k9s/: views.yaml
linux/: Xdefaults  ansible_bootstrap.sh  extend.sh  install_i3.sh  xsessionrc
misc/: Thrawny.theme  base16_monokai.yaml  direnvrc  ghostty-config  ideavimrc  starship.toml  thrawny.zsh-theme
niri-switcher/: Cargo.toml  Justfile  handoff.md  mise.toml
nix/: AGENTS.md  CLAUDE.md  Justfile  bootstrap-nix.conf  common.nix  flake.nix  remove-symlinks.sh  statix.toml
nvim/: init.lua  init.vim  lazy-lock.json  plugins.lua
osx/: Brewfile  Brewfile-dev  Brewfile-kanel  Brewfile-personal  brewlist  com.jle.brew-update.plist  setup.sh
rules/: go.md  python.md  typescript.md
rust/: Cargo.toml  Justfile
rust/agent-switch/: Cargo.toml
rust/agent-switch/src/: daemon.rs  main.rs  niri.rs  state.rs  tmux.rs  track.rs
rust/bash-validator/: Cargo.toml
rust/bash-validator/src/: main.rs
rust/niri-switcher/: .envrc  Cargo.toml  README.md  config.example.toml  config.toml.example  mise.toml
rust/niri-switcher/src/: main.rs
rust/session-tracker/: Cargo.toml
rust/session-tracker/src/: main.rs
rust/tmux-fzf-switcher/: Cargo.toml
rust/tmux-fzf-switcher/src/: main.rs
rust/voice/: Cargo.toml
rust/voice/src/: main.rs
scripts/: bootstrap-asahi-fedora.sh  deploy-hetzner.sh  git-cleanup-repo  helium-profile-launchers  install-devcontainer.sh  install-nix-container.sh  keyboard-layout-switch  nuke-treesitter.sh  pre-commit  recreate-sandbox-docker.sh  setup-ai-tools.sh
session-tracker/: Cargo.toml
session-tracker-zig/: build.zig
shell/: thrawny.zsh-theme  tmux-status-custom.conf  tmux.conf  zshrc
skills/: README.md
vim/: vimrc
vimium/: config
vscode/: keybindings.json  settings.json
(+368 files in other folders)
