[project]
name = "dotfiles"
version = "0.0.0"
requires-python = ">=3.13"

[tool.basedpyright]
include = [".", "bin/kpf", "bin/notify", "bin/notify-sound"]
exclude = [
  ".venv",
  "venv",
  "__pycache__",
  ".git",
  "lab"
]
reportExplicitAny = false
reportAny = false
reportUnusedCallResult = false
reportImplicitOverride = false

[tool.ruff]
extend-include = ["bin/kpf", "bin/notify", "bin/notify-sound"]

[tool.ruff.lint]
select = ["I"]
