[project]
name = "dotfiles"
version = "0.0.0"
requires-python = ">=3.13"

[tool.basedpyright]
include = [".", "bin/incus-dev", "bin/kpf", "bin/run-if-changed"]
exclude = [
  ".venv",
  "venv",
  "__pycache__",
  ".git",
  ".direnv",
  ".ruff_cache",
  "lab",
  "skills/skill-creator",
  "config/claude/status_line.py",
  "result",
  "nix/result",
  "config/pi/node_modules"
]
reportExplicitAny = false
reportAny = false
reportUnusedCallResult = false
reportImplicitOverride = false

[tool.ruff]
extend-include = ["bin/incus-dev", "bin/kpf", "bin/run-if-changed"]

[tool.ruff.lint]
select = ["I"]
