[workspace]
resolver = "3"
members = ["session-tracker", "niri-switcher", "bash-validator"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
regex = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
