[package]
name = "agent-switch"
version = "0.1.0"
edition.workspace = true

[features]
default = []
niri = ["gtk4", "gtk4-layer-shell", "niri-ipc", "toml", "shellexpand"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
libc = "0.2"
notify = "8"
time = { version = "0.3", features = ["parsing", "formatting"] }
toml = { version = "0.9", optional = true }
shellexpand = { version = "3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = { version = "0.10", optional = true }
gtk4-layer-shell = { version = "0.7", optional = true }
niri-ipc = { version = "=25.11.0", optional = true }
