[package]
name = "niri-switcher"
version = "0.1.0"
edition.workspace = true

[dependencies]
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
gtk4 = "0.10"
gtk4-layer-shell = "0.7"
toml = "0.9"
shellexpand = "3"
clap = { version = "4", features = ["derive"] }
notify = "8"
niri-ipc = "=25.11.0"
