[package]
name = "voice"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
toml = "0.8"
dirs = { workspace = true }
reqwest = { version = "0.12", features = ["multipart", "rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["rt", "process", "io-util", "fs", "sync", "net", "signal", "macros"] }
